Scoped status updates to the current user on create and update.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,9 @@
       <%= devise_error_messages! %>
 
       <%= f.input :email %>
+      <%= f.input :first_name %>
+      <%= f.input :last_name %>
+      <%= f.input :profile_name %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
