--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a href="#" class="brand">Catz</a>
+				<a href="#" class="brand">Catalog47</a>
 				<ul class="nav">
-					<li><%= link_to "Feed", feed_path %></li>
-					<li><%= link_to "Meow Moar", new_status_path %></li>
+					<li><%= link_to "Catalogs", feed_path %></li>
+					<li><%= link_to "Post a log", new_status_path %></li>
 				</ul>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
