--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,14 +13,15 @@
  */
 
 body {
-	padding-top: 40px;
+	padding-top: 55px;
+	background-color: rgb(238, 238, 238);
 }
 
 .info-text {
 	color: rgb(151, 151, 151);
-	margin: -15px 15px 5px 0;
+	margin: -14px 12px 6px 0;
 	font-size: 12px;
-	width: 225px;
+	width: 290px;
 }
 .update-btn-adjust {
 	margin: 12px 180px;
@@ -31,6 +32,34 @@ body {
 }
 
 textarea#status_content.text.required {
-	width: 400px;
-	height: 100px;
+	width: 70%;
+	height: 70px;
 }
+
+.span4 img {
+	border-radius: 5px;
+	margin: 35px 0px;
+}
+
+.new-log {
+	margin: 30px 0 10px 0;
+}
+.cat {
+	margin: 11px 15px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
