--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -5,9 +5,10 @@
 .status {
 	border: solid 1px rgb(238, 238, 238);
 	padding: 12px 15px;
-	background: rgba(248, 248, 248, 1);
-	border-radius: 3px;
+	background: rgba(255, 255, 255, 1);
+	border-radius: 4px;
 	margin: 10px 0;
+	border: solid 1px rgba(0, 0, 0, 0.12);
 }
 .status p {
 	margin: 4px 0;
