--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1>What catz are saying meow...</h1>
-  <%= link_to "Meow Moar", new_status_path, class: "btn btn-primary right-align" %>
+  <%= link_to "Meow Moar", new_status_path, class: "btn btn-info right-align" %>
 </div>
 
 <div class="row">
@@ -33,5 +33,9 @@
 
 <% end %>
   </div>
-  <div class="span4"></div>
+  <div class="span4">
+
+    <%= image_tag("cat2.jpeg", :alt => "cats typing", :class => 'cat') %>
+
+  </div>
 </div>
